# SpineML_2_BRAHMS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  configure  configure.ac  convert_script_s2b  convert_script_s2b.1  errorMsgLookup.txt  preprocess_model.build  preprocess_model.cpp  readme.MacOS  readme.about_gitsubtree  readme.debugging  readme.output_dir  readme.spineml  spineml-2-brahmsConfig.h.in
examples/Angular Detector Velocity Unit/: LIF.xml  LIF2.xml  LIF_det.xml  experiment1.xml  experiment2.xml  passthroughNB.xml
examples/Basal Ganglia Rate Coded/: Basal Ganglia Rate Coded.proj  LIN.xml  LINdopa.xml  LINinh.xml  experiment0.xml  passthroughPS.xml
examples/Basal Ganglia Spiking/: FixedWeight.xml  Grid.xml  IAF.xml  IAFdopa.xml  countspikes1.xml  experiment0.xml  model.xml  spikePass1.xml  spikePass2.xml
examples/Brette Benchmark/: Brette_Benchmark_Network.xml
examples/Brette Benchmark (PyNN Neurons)/: Brette_Benchmark_PyNN_Network.xml  Brette_Benchmassrk_PyNN_Experiment.xml  IF_curr_exp.xml  PyNN_PostSynapse.xml
examples/Striatal Model/: Gap_junction_compartment.xml  Random2D.xml  Striatal Model.proj  Striatal_D1_Medium_Spiny.xml  Striatal_Fast-spiking_Interneuron.xml  experiment0.xml  regular_spike.xml  static_weight.xml
include/: .gitignore  CMakeLists.txt  Makefile.am  impulse.h  maketests.sh  rng.h  testexponential.cpp  testnormal.cpp  testpoisson.cpp  testrng.cpp  testuniform.cpp  testuniformGCC.cpp
schemas/: SpineMLExperimentLayer.xsd  SpineMLLowLevelNetworkLayer.xsd  SpineMLNetworkLayer.xsd
spineml/: README.md
spineml/examples/Angular Detector Velocity Unit/: LIF1.xml  LIF_det1.xml  LIFposneg.xml  README.txt  box_average.xml  experiment0.xml  experiment3.xml  experiment4.xml  experiment5.xml  hexagonal.xml  hexagonal_offset.xml  metaData.xml  model.xml  special.xml  vis_guidance.proj
spineml/examples/Basal Ganglia Rate Coded/: metaData.xml  model.xml  weight.xml
spineml/examples/Basal Ganglia Spiking/: Basal Ganglia Spiking.proj  Curr_exp.xml  metaData.xml  spikePass.xml
spineml/examples/Brette Benchmark/: Brette_Benchmark_Experiment.xml  Brette_Benchmark_Network_Split100.xml  Curr_exp.xml  FixedWeight.xml  LIF.xml
spineml/examples/Brette Benchmark (PyNN Neurons)/: PyNN_WeightUpdate.xml
spineml/examples/Striatal Model/: Conductance_exp_Mg_block_synapse_sat.xml  Conductance_exp_synapse.xml  Random3D.xml  Striatal_D2_Medium_Spiny.xml  model.xml
spineml/schemas/: SpineMLComponentLayer.xsd  SpineMLExperimentLayer.xsd  SpineMLLowLevelNetworkLayer.xsd  SpineMLNetworkLayer.xsd
tools/: CMakeLists.txt  Makefile.am  client.h
tools/AnalogConstantInput/: CMakeLists.txt  Makefile.am
tools/AnalogConstantInput/brahms/: Makefile.am
tools/AnalogConstantInput/brahms/0/: CMakeLists.txt  Makefile.am  component.cpp
tools/AnalogTimeVaryingInput/: CMakeLists.txt  Makefile.am  node.xml
tools/AnalogTimeVaryingInput/brahms/0/: CMakeLists.txt  Makefile.am  build  component.cpp
tools/EventConstantInput/: CMakeLists.txt  Makefile.am
tools/EventConstantInput/brahms/0/: CMakeLists.txt  Makefile.am  build  component.cpp
tools/EventTimeVaryingInput/: CMakeLists.txt  Makefile.am
tools/EventTimeVaryingInput/brahms/0/: CMakeLists.txt  Makefile.am  component.cpp
tools/allToAll/: CMakeLists.txt  Makefile.am
tools/allToAll/brahms/0/: CMakeLists.txt  Makefile.am  build.in  component.cpp
tools/dev/: readme.txt
tools/explicitList/: CMakeLists.txt  Makefile.am
tools/explicitList/brahms/0/: CMakeLists.txt  Makefile.am  build  component.cpp
tools/externalInput/: CMakeLists.txt  Makefile.am
tools/externalInput/brahms/0/: CMakeLists.txt  Makefile.am  build  component.cpp  component.dylib
tools/externalInput2/brahms/0/: Makefile.am  build  component.cpp
tools/externalOutput/: CMakeLists.txt  Makefile.am
tools/externalOutput/brahms/0/: CMakeLists.txt  Makefile.am  component.cpp
tools/fixedProbability/: CMakeLists.txt  Makefile.am
tools/fixedProbability/brahms/0/: CMakeLists.txt  Makefile.am  build  component.cpp
tools/readOutputFile/: CMakeLists.txt  Makefile.am  node.xml
tools/readOutputFile/brahms/0/: CMakeLists.txt  Makefile.am  build  component.cpp  release.xml
tools/readOutputFile/test/: run_test.sh  test_readfile.xml  test_readfile_exe.xml
xsl/: CMakeLists.txt  HL_to_LL.xsl  Makefile.am  SpineML_2_BRAHMS_write_script.xsl  SpineML_2_BRAHMS_write_script_linux.xsl  SpineML_2_BRAHMS_write_script_osx.xsl
xsl/HL/: CMakeLists.txt  Makefile.am  SpineML_2_BRAHMS_CL_neurons.xsl  SpineML_2_BRAHMS_CL_postsyn.xsl  SpineML_2_BRAHMS_CL_weight.xsl  SpineML_2_BRAHMS_EXPT.xsl  SpineML_2_BRAHMS_NL.xsl  SpineML_Alias.xsl  SpineML_AnalogPort.xsl  SpineML_Dynamics.xsl  SpineML_EventOut.xsl  SpineML_EventPort.xsl  SpineML_ImpulseOut.xsl  SpineML_ImpulsePort.xsl  SpineML_OnCondition.xsl  SpineML_OnEvent.xsl  SpineML_OnImpulse.xsl  SpineML_Parameter.xsl  SpineML_Regime.xsl  SpineML_StateAssignment.xsl  SpineML_StateVariable.xsl  SpineML_TimeDerivative.xsl  SpineML_helpers.xsl
xsl/LL/: .gitignore  Armsim.xsl  CMakeLists.txt  Makefile.am  Saccsim_Oculomotor.xsl  SpineML_2_BRAHMS_CL_neurons.xsl  SpineML_2_BRAHMS_CL_postsyn.xsl  SpineML_2_BRAHMS_CL_weight.xsl  SpineML_2_BRAHMS_EXPT.xsl  SpineML_2_BRAHMS_NL.xsl  SpineML_Alias.xsl  SpineML_AnalogPort.xsl  SpineML_ArrayConstantInput_NL.xsl  SpineML_ArrayTimeVaryingInput_NL.xsl  SpineML_ConstantInput_NL.xsl  SpineML_Dynamics.xsl  SpineML_EventOut.xsl  SpineML_EventPort.xsl  SpineML_ExternalInput_NL.xsl  SpineML_ExternalOutput_NL.xsl  SpineML_GenericInput_NL.xsl  SpineML_ImpulseOut.xsl  SpineML_ImpulsePort.xsl  SpineML_Neuron_NL.xsl  SpineML_OnCondition.xsl  SpineML_OnEvent.xsl  SpineML_OnImpulse.xsl  SpineML_Parameter.xsl  SpineML_PostSynapse_NL.xsl  SpineML_ProjectionLinks_NL.xsl  SpineML_Regime.xsl  SpineML_StateAssignment.xsl  SpineML_StateVariable.xsl  SpineML_TimeDerivative.xsl  SpineML_TimeVaryingInput_NL.xsl  SpineML_WeightUpdate_NL.xsl  SpineML_helpers.xsl  external_default.xsl  eyeless.xsl
