add_subdirectory(allToAll)
add_subdirectory(explicitList)
add_subdirectory(fixedProbability)
add_subdirectory(AnalogConstantInput)
add_subdirectory(EventConstantInput)
add_subdirectory(externalInput)
add_subdirectory(AnalogTimeVaryingInput)
add_subdirectory(EventTimeVaryingInput)
add_subdirectory(externalOutput)
add_subdirectory(readOutputFile)
