EXTRA_DIST = SpineML_2_BRAHMS_CL_neurons.xsl  SpineML_ImpulseOut.xsl \
SpineML_2_BRAHMS_CL_postsyn.xsl  SpineML_ImpulsePort.xsl \
SpineML_2_BRAHMS_CL_weight.xsl   SpineML_OnCondition.xsl \
SpineML_2_BRAHMS_EXPT.xsl        SpineML_OnEvent.xsl \
SpineML_2_BRAHMS_NL.xsl          SpineML_OnImpulse.xsl \
SpineML_Alias.xsl                SpineML_Parameter.xsl \
SpineML_AnalogPort.xsl           SpineML_Regime.xsl \
SpineML_Dynamics.xsl             SpineML_StateAssignment.xsl \
SpineML_EventOut.xsl             SpineML_StateVariable.xsl \
SpineML_EventPort.xsl            SpineML_TimeDerivative.xsl

xsldir = $(datadir)/spineml-2-brahms/xsl/HL
xsl_DATA = $(EXTRA_DIST)
